2017.271: 1.8rc
	- Add detection for case of record length one byte too many at end
	of file, auto correct this invalid record length.
	- Reformat source according to included clang-format profile.

2017.099: 1.7
	- Update libmseed to 2.19.3.
	- Remove dependency on ntwin32.mak for Windows nmake makefiles, now
	building works in plain MSVC development environments.
	- Add DEPRECATED notice to Makefile.wat and src/Makefile.wat.
	- Update licensing to GNU GPL 3.

2013.053: 1.6
	- Update to libmseed 2.9.
	- Add logic to shift all far future data times (year > 2050) to the
	year 2050.
	- Add the -rfy option to retain the far future year time stamps.

2013.045: 1.6rc
	- Update to libmseed 2.8, including many small fixes and better future
	date support.

2011.028:
	- Add error checking to fread() used to skip format ID character.
	- Add diagnostic message to print SeisAn component and SEED channel.

2010.029: 1.5
	- Update to libmseed 2.4, including fixes for packing long
	segments of data.

2008.220: 1.4
	- Update to libmseed 2.1.6, including much improved Steim 1
	and 2 encoding performance.

2007.284: 1.3
	- Update to libmseed 2.1.4.
	- Change src/Makefile so user defined CFLAGS are used if set.

2006.208: 1.2
	- Update to libmseed 1.8.
	- Fix small, inconsequential memory leak.

2006.183: 1.1
	- Update to libmseed 1.7.

2006.034: 1.0
	- Bump version 1.0, no code changes.

2005.336: 0.9
	- Update to libmseed 1.4.5.
	- Fix reading of 16-bit (2 byte) integer samples.

2005.329: 0.8.2
	- Update to libmseed 1.4.4.
	- Add explicit text to man page and help message about
	'filenr.lis' being a special case list file.
	- List file parsing now assumes that the last, space
	separated field on each line is the filename; accomodates
	simple list files and various dirf (filenr.lis) formats.

2005.315: 0.8.1
	- Update to libmseed 1.4.3 which has a WIN32 define for 
	strcasecmp().

2005.314: 0.8
	- If the 3rd component character is not a space put it in the