@@ -1,6 +1,7 @@
 2017.271: 1.8rc
 	- Add detection for case of record length one byte too many at end
 	of file, auto correct this invalid record length.
+	- Add portability function for 64-bit file position, stop using off_t.
 	- Reformat source according to included clang-format profile.
 
 2017.099: 1.7
